<resources>
<!--    <string name="app_name">OfficeGo</string>-->
    <string name="str_tab_home">首页</string>
    <string name="str_tab_message">消息</string>
    <string name="str_tab_schedule">行程</string>
    <string name="str_tab_mine">我的</string>
    <string name="str_platform_skip">跳过</string>
    <string name="str_button_check">验证</string>
    <string name="str_get_sms_code">获取验证码</string>
    <string name="str_please_input_sms_code">请输入验证码</string>
    <string name="str_sms_code">验证码</string>
    <string name="str_please_input_mobile">请输入手机号码</string>
    <string name="str_mobile">手机号</string>
    <string name="str_check_mobile">验证手机号</string>
    <string name="str_please_input_platform_mobile">请输入您在%s的手机号</string>
    <string name="str_platform_sms_code_error">验证码错误，请重新输入</string>
    <string name="str_count_down_second">s</string>
    <string name="str_resend">重新发送</string>
    <string name="str_get_code">获取短信验证码</string>
    <string name="toast_press_again_quit">再按一次退出</string>
    <string name="str_house_all">全部</string>
    <string name="str_house_office">写字楼</string>
    <string name="str_house_tenant">共享办公</string>
    <string name="str_order_def">默认排序</string>
    <string name="str_order_price_up_down">价格从高到低</string>
    <string name="str_order_price_down_up">价格从低到高</string>
    <string name="str_order_area_up_down">面积从大到小</string>
    <string name="str_order_area_down_up">面积从小到大</string>
    <string name="str_clear">清除</string>
    <string name="str_independent_office">独立办公室</string>
    <string name="str_open_work">开放工位</string>
    <string name="str_llook_more">查看更多</string>
    <string name="str_title_characteristic_service">特色服务</string>
    <string name="str_title_create_service">企业服务</string>
    <string name="str_title_base_sservice">基础服务</string>
    <string name="str_open_office">开放工位</string>
    <string name="str_collect">收藏</string>
    <string name="str_collected">已收藏</string>
    <string name="str_find_house_owner">找房东聊</string>
    <string name="str_goto_top">回顶</string>
    <string name="str_office_building">写字楼/网点</string>
    <string name="str_work_office">办公室</string>
    <string name="str_history">历史</string>
    <string name="str_find">发现</string>
    <string name="str_recommend">推荐</string>
    <string name="str_viewing_date">看房行程</string>
    <string name="str_help">帮助与反馈</string>
    <string name="str_customer_service">客服</string>
    <string name="str_privacy">隐私条款</string>
    <string name="str_about_us">关于我们</string>
    <!--微信-->
    <string name="errcode_success">分享成功</string>
    <string name="errcode_cancel">分享取消</string>
    <string name="errcode_deny">发送被拒绝</string>
    <string name="errcode_unsupported">不支持错误</string>
    <string name="errcode_unknown">发送返回</string>
    <string name="wx_not_install">您还未安装微信客户端</string>
    <string name="wx_str_no_support_pay">当前微信版本不支持支付，请升级到新版本</string>
    <string name="wx_version_no_support_timeline">当前微信版本不支持分享到朋友圈，请升级到新版本</string>
    <string name="str_need_install_wx">请安装微信app</string>
    <!--    sd -->
    <string name="str_take_photo">拍照</string>
    <string name="str_choose_from_album">从相册选择</string>
    <string name="str_no_sd">设备没有SD卡！</string>
    <string name="str_please_open_sd">请允许打操作SDCard！！</string>
    <string name="str_please_open_camera">请允许打开相机！！</string>
    <!--    星期-->
    <string name="str_monday">一</string>
    <string name="str_tuesday">二</string>
    <string name="str_wednesday">三</string>
    <string name="str_thursday">四</string>
    <string name="str_friday">五</string>
    <string name="str_saturday">六</string>
    <string name="str_sunday">日</string>
    <string name="str_appointment_record">约看记录</string>
    <string name="str_search">搜索</string>
    <string name="str_recommend_house">推荐房源</string>
    <string name="str_nearby_house">附近房源</string>
    <!--    video-->
    <string name="video_play_loading">视频加载中，请稍候</string>
    <string name="str_setting">设置</string>
    <string name="str_version_update">版本更新</string>
    <string name="str_switch_id">切换身份</string>
    <string name="str_logout">退出登录</string>
    <string name="str_shanghai">上海</string>
    <string name="video_play_time_00_00">00:00</string>
    <string name="str_text_video">视频</string>
    <string name="str_text_picture">图片</string>
    <string name="str_no_password_login">本机免密登录</string>
    <string name="str_app_download_progress">下载进度</string>
    <string name="str_start_viewing_date">预约看房</string>
    <string name="str_exchange_mobile">换手机</string>
    <string name="str_exchange_wx">换微信</string>
    <string name="str_text_report">举报</string>
    <string name="str_text_line">一 一</string>
    <string name="str_def_time_start_conversation">一 一由你发起沟通</string>
    <string name="str_time_start_conversation">%s由你发起沟通</string>
    <string name="str_text_unknown">未知</string>
    <!--    webView-->
    <string name="webview_cannot_find_page">找不到网页</string>
    <string name="webview_cannot_open_page">网页无法打开</string>
    <string name="str_title_help">帮助与反馈</string>
    <string name="str_title_protocol">隐私条款</string>
    <string name="str_title_about_us">关于我们</string>
    <string name="str_text_right_now_look">立即查看</string>
    <string name="str_skip">跳过</string>
    <string name="str_text_area"><![CDATA[面积<font color=\'#999999\'>&#160;㎡</font>]]></string>
    <string name="str_text_rent"><![CDATA[租金<font color=\'#999999\'>&#160;元/㎡/天</font>]]></string>
    <string name="str_text_workstation"><![CDATA[工位<font color=\'#999999\'>&#160;个</font>]]></string>
    <string name="tip_input_correct_phone">请输入正确的手机号</string>
    <string name="tip_sms_code_send_success">验证码已发送</string>
    <string name="str_cannot_get_mine_phone">无法获取本机号码</string>
    <string name="str_login_success">登录成功</string>
    <string name="button_agree">同意</string>
    <string name="button_reject">拒绝</string>
    <!--    dialog-->
    <string name="dialog_title_exchange_phone_contacts">是否确认与对方交换手机号？</string>
    <string name="dialog_title_exchange_wechat_contacts">是否确认与对方交换微信？</string>
    <string name="str_copy_phone">复制号码</string>
    <string name="str_call_phone">立即拨打</string>
    <string name="str_cannot_bind_wechat">当前未绑定微信</string>
    <string name="str_input_wechat">请输入您的微信号</string>
    <string name="str_copy_wechat">复制微信号</string>
    <string name="str_look_house_time">看房时间：</string>
    <string name="tip_save_fail">保存失败</string>
    <string name="str_unlimited">不限</string>
    <string name="str_business_circle">商圈</string>
    <string name="str_subway">地铁</string>
    <string name="str_more_points">…</string>
    <string name="str_month6_rental">6个月起租</string>
    <string name="str_work_num">工位</string>
    <string name="str_text_characteristic">特色</string>
    <string name="str_all_station">全部站点</string>
    <string name="str_save">保存</string>
    <string name="tip_get_person_exception">获取个人信息异常</string>
    <string name="tip_save_success">保存成功</string>
    <string name="tip_current_newest_version">当前已是最新版本</string>
    <string name="tip_current_day_no_data">暂无看房行程</string>
    <string name="str_are_you_sure_to_logout">是否确定退出？</string>
    <string name="tip_get_house_message_fail">获取房源信息失败</string>
    <string name="tip_delete_fail">删除失败</string>
    <string name="tip_delete_success">删除成功</string>
    <string name="tip_go_to_login">请先登录</string>
    <string name="tip_no_more_data">没有更多数据了</string>
    <string name="str_query_more_data">查看更多</string>
    <string name="str_switch_tenant">切换为租户</string>
    <string name="are_you_sure_switch_tenant">是否确认切换为租户?</string>
    <string name="str_title_role">员工管理</string>
    <string name="str_go_away">离开</string>
    <string name="str_submit_identity">提交认证</string>
    <string name="tip_image_upload_overlimit">图片已上传最大限制了</string>
    <string name="tip_create_success">创建成功</string>
    <string name="button_text_sure_create">确认创建</string>
    <string name="text_click_upload">点击上传</string>

</resources>
