<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pop_background">

    <RelativeLayout
        android:id="@+id/rl_topview"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_490"
        android:background="@color/white">

        <RelativeLayout
            android:id="@+id/ll_left"
            android:layout_width="@dimen/dp_98"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/dp_54"
            android:background="@color/text_f7"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_shopping"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/dp_20"
                android:text="@string/str_business_circle"
                android:textColor="@color/text_33"
                android:textSize="@dimen/sp_15" />

            <TextView
                android:id="@+id/tv_shop_num"
                android:layout_width="@dimen/dp_16"
                android:layout_height="@dimen/dp_16"
                android:layout_marginTop="@dimen/dp_12"
                android:layout_toEndOf="@id/tv_shopping"
                android:background="@drawable/oval_blue"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_10"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tv_meter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_shopping"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/dp_30"
                android:text="@string/str_subway"
                android:textColor="@color/text_33"
                android:textSize="@dimen/sp_15" />

            <TextView
                android:id="@+id/tv_meter_num"
                android:layout_width="@dimen/dp_16"
                android:layout_height="@dimen/dp_16"
                android:layout_below="@id/tv_shopping"
                android:layout_marginTop="@dimen/dp_22"
                android:layout_toEndOf="@id/tv_shopping"
                android:background="@drawable/oval_blue"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_10"
                android:visibility="gone" />
        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_center"
            android:layout_width="@dimen/dp_108"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/dp_54"
            android:layout_toEndOf="@id/ll_left"
            android:gravity="center_horizontal" />

        <View
            android:layout_width="@dimen/dp_1"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/dp_60"
            android:layout_toEndOf="@id/rv_center"
            android:background="@color/common_divider" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_right"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/dp_54"
            android:layout_toEndOf="@id/rv_center"
            android:paddingStart="@dimen/dp_10"
            tools:ignore="RtlSymmetry" />

        <RelativeLayout
            style="@style/marginLeftRight15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="@dimen/dp_4"
            android:layout_marginBottom="@dimen/dp_6">

            <Button
                android:id="@+id/btn_clear"
                android:layout_width="@dimen/dp_102"
                android:layout_height="@dimen/dp_38"
                android:background="@drawable/button_corners_solid_grey"
                android:gravity="center"
                android:text="@string/str_clear"
                android:textColor="@color/text_33"
                android:textSize="@dimen/sp_15" />

            <Button
                android:id="@+id/btn_sure"
                android:layout_width="@dimen/dp_212"
                android:layout_height="@dimen/dp_38"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="@dimen/dp_12"
                android:layout_toEndOf="@id/btn_clear"
                android:background="@drawable/button_corners_solid_main"
                android:gravity="center"
                android:text="@string/str_confirm"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_15" />
        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>